src/procesamientos/AnalizadorSintactico.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintactico.java */
package procesamientos;

import java.util.List;
import java.util.ArrayList;
import java.util.Collections;
import static asint.Sintaxis.*;

@SuppressWarnings({ "rawtypes", "unused", "unchecked" })
public class AnalizadorSintactico extends Procesamiento implements AnalizadorSintacticoConstants {

  final public Prog Prog() throws ParseException {
               List<Dec> ldec; List<Ins> lins;
    ldec = SeccionDecs();
    lins = SeccionIns();
    jj_consume_token(punto);
    jj_consume_token(0);
    {if (true) return new Prog(ldec, lins, new Nodo(1, 1));}
    throw new Error("Missing return statement in function");
  }

  final public List<Dec> SeccionDecs() throws ParseException {
                           List<Dec> ldec = new ArrayList<Dec>(); Dec dec;
    label_1:
    while (true) {
      switch (jj_nt.kind) {
      case var:
      case tipo:
      case proc:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      dec = Dec();
               ldec.add(dec);
      jj_consume_token(puntoComa);
    }
    {if (true) return Collections.unmodifiableList(ldec);}
    throw new Error("Missing return statement in function");
  }

  final public List<Ins> SeccionIns() throws ParseException {
                          List<Ins> lins = new ArrayList<Ins>(); Ins ins;
    jj_consume_token(begin);
    label_2:
    while (true) {
      switch (jj_nt.kind) {
      case ifSimbolo:
      case whileSimbolo:
      case read:
      case write:
      case nl:
      case newSimbolo:
      case delete:
      case seq:
      case booleano:
      case nulo:
      case resta:
      case not:
      case parentesisApertura:
      case entero:
      case real:
      case identificador:
      case cadena:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      ins = Ins();
                       lins.add(ins);
    }
    jj_consume_token(end);
    {if (true) return Collections.unmodifiableList(lins);}
    throw new Error("Missing return statement in function");
  }

  final public Dec Dec() throws ParseException {
             Dec dec;
    switch (jj_nt.kind) {
    case var:
      dec = DecVar();
    {if (true) return dec;}
      break;
    case tipo:
      dec = DecTipo();
    {if (true) return dec;}
      break;
    case proc:
      dec = DecProc();
    {if (true) return dec;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec DecVar() throws ParseException {
                Token id; Tipo tipo;
    jj_consume_token(var);
    id = jj_consume_token(identificador);
    jj_consume_token(dosPuntos);
    tipo = Tipo();
    {if (true) return new Var(id.image, tipo, new Nodo(id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Dec DecTipo() throws ParseException {
                 Token id; Tipo t;
    jj_consume_token(tipo);
    id = jj_consume_token(identificador);
    jj_consume_token(dosPuntos);
    t = Tipo();
    {if (true) return new Type(id.image, t, new Nodo(id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Dec DecProc() throws ParseException {
                 Token id; List<Param> param; List<Dec> ldec; List<Ins> lins;
    jj_consume_token(proc);
    id = jj_consume_token(identificador);
    jj_consume_token(parentesisApertura);
    param = PFormales();
    jj_consume_token(parentesisCierre);
    ldec = SeccionDecs();
    lins = SeccionIns();
    {if (true) return new Proc(id.image, param, ldec, lins, new Nodo(id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public List<Param> PFormales() throws ParseException {
                           List<Param> lparam = new ArrayList<Param>(); Param param;
    switch (jj_nt.kind) {
    case var:
    case identificador:
      param = PFormal();
                     lparam.add(param);
      label_3:
      while (true) {
        switch (jj_nt.kind) {
        case coma:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        jj_consume_token(coma);
        param = PFormal();
                            lparam.add(param);
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    {if (true) return Collections.unmodifiableList(lparam);}
    throw new Error("Missing return statement in function");
  }

  final public Param PFormal() throws ParseException {
                   Token v = null; Token id; Tipo tipo;
    switch (jj_nt.kind) {
    case var:
      v = jj_consume_token(var);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    id = jj_consume_token(identificador);
    jj_consume_token(dosPuntos);
    tipo = Tipo();
    Nodo nodo = new Nodo(id.beginLine, id.beginColumn);
    {if (true) return (v == null)? new Pval(id.image, tipo, nodo): new Pvar(id.image, tipo, nodo);}
    throw new Error("Missing return statement in function");
  }

  final public Tipo Tipo() throws ParseException {
               Token basico; Tipo tipo;
    switch (jj_nt.kind) {
    case tipoBasico:
      basico = jj_consume_token(tipoBasico);
    String str = basico.image;
    Nodo nodo = new Nodo(basico.beginLine, basico.beginColumn);

    if (str.equals("int"))
      {if (true) return new Int(nodo);}
    else if (str.equals("real"))
      {if (true) return new Real(nodo);}
    else if (str.equals("bool"))
      {if (true) return new Bool(nodo);}
    else if (str.equals("string"))
      {if (true) return new Str(nodo);}
      break;
    case identificador:
      tipo = TipoRenombrado();
    {if (true) return tipo;}
      break;
    case array:
      tipo = TipoArray();
    {if (true) return tipo;}
      break;
    case registro:
      tipo = TipoRegistro();
    {if (true) return tipo;}
      break;
    case puntero:
      tipo = TipoPuntero();
    {if (true) return tipo;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo TipoRenombrado() throws ParseException {
                         Token id;
    id = jj_consume_token(identificador);
    {if (true) return new Ref(id.image, new Nodo(id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Tipo TipoArray() throws ParseException {
                    Token a; Token tam; Tipo tipo;
    a = jj_consume_token(array);
    jj_consume_token(corcheteApertura);
    tam = jj_consume_token(entero);
    jj_consume_token(corcheteCierre);
    jj_consume_token(of);
    tipo = Tipo();
    {if (true) return new Array(tipo, tam.image, new Nodo(a.beginLine, a.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Tipo TipoPuntero() throws ParseException {
                      Token punt; Tipo base;
    punt = jj_consume_token(puntero);
    base = Tipo();
    {if (true) return new Puntero(base, new Nodo(punt.beginLine, punt.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Tipo TipoRegistro() throws ParseException {
                       Token reg; List<Campo> lcampo = new ArrayList<Campo>(); Campo campo;
    reg = jj_consume_token(registro);
    label_4:
    while (true) {
      campo = Campo();
                                  lcampo.add(campo);
      switch (jj_nt.kind) {
      case identificador:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(end);
    {if (true) return new Reg(Collections.unmodifiableList(lcampo), new Nodo(reg.beginLine, reg.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Campo Campo() throws ParseException {
                 Token id; Tipo tipo;
    id = jj_consume_token(identificador);
    jj_consume_token(dosPuntos);
    tipo = Tipo();
    jj_consume_token(puntoComa);
    {if (true) return new Campo(id.image, tipo, new Nodo(id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Ins() throws ParseException {
             Ins ins;
    switch (jj_nt.kind) {
    case booleano:
    case nulo:
    case resta:
    case not:
    case parentesisApertura:
    case entero:
    case real:
    case identificador:
    case cadena:
      ins = Ident();
    {if (true) return ins;}
      break;
    case ifSimbolo:
      ins = Condicional();
    {if (true) return ins;}
      break;
    case whileSimbolo:
      ins = While();
    {if (true) return ins;}
    {if (true) return ins;}
      break;
    case read:
      ins = Lectura();
    {if (true) return ins;}
      break;
    case write:
      ins = Escritura();
    {if (true) return ins;}
      break;
    case nl:
      ins = NewLine();
    {if (true) return ins;}
      break;
    case newSimbolo:
      ins = New();
    {if (true) return ins;}
      break;
    case delete:
      ins = Delete();
    {if (true) return ins;}
      break;
    case seq:
      ins = Compuesta();
    {if (true) return ins;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Ins Ident() throws ParseException {
               Exp eid; Ins ins;
    eid = Expresion();
    ins = InsExp(eid);
    {if (true) return ins;}
    throw new Error("Missing return statement in function");
  }

  final public Ins InsExp(Exp eid) throws ParseException {
                       Ins ins;
    switch (jj_nt.kind) {
    case asignacion:
      ins = Asig(eid);
    {if (true) return ins;}
      break;
    case parentesisApertura:
      ins = Invoc(eid);
    {if (true) return ins;}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Ins Asig(Exp ei) throws ParseException {
                    Token asig; Exp ed;
    asig = jj_consume_token(asignacion);
    ed = Expresion();
    jj_consume_token(puntoComa);
    {if (true) return new Asig(ei, ed, new Nodo(asig.beginLine, asig.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Invoc(Exp eid) throws ParseException {
                      Token parentesis; List<Exp> preal;
    parentesis = jj_consume_token(parentesisApertura);
    preal = PReales();
    jj_consume_token(parentesisCierre);
    jj_consume_token(puntoComa);
    {if (true) return new Invoc(eid, preal, new Nodo(parentesis.beginLine, parentesis.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Condicional() throws ParseException {
  Token cond; Exp exp; Token e = null; Ins ins; List<Ins> lins = new ArrayList<Ins>(), lins2 = new ArrayList<Ins>();
    cond = jj_consume_token(ifSimbolo);
    exp = Expresion();
    jj_consume_token(then);
    label_5:
    while (true) {
      switch (jj_nt.kind) {
      case ifSimbolo:
      case whileSimbolo:
      case read:
      case write:
      case nl:
      case newSimbolo:
      case delete:
      case seq:
      case booleano:
      case nulo:
      case resta:
      case not:
      case parentesisApertura:
      case entero:
      case real:
      case identificador:
      case cadena:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      ins = Ins();
                                                       lins.add(ins);
    }
    switch (jj_nt.kind) {
    case elseSimbolo:
      e = jj_consume_token(elseSimbolo);
      label_6:
      while (true) {
        switch (jj_nt.kind) {
        case ifSimbolo:
        case whileSimbolo:
        case read:
        case write:
        case nl:
        case newSimbolo:
        case delete:
        case seq:
        case booleano:
        case nulo:
        case resta:
        case not:
        case parentesisApertura:
        case entero:
        case real:
        case identificador:
        case cadena:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        ins = Ins();
                                lins2.add(ins);
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(end);
    switch (jj_nt.kind) {
    case puntoComa:
      jj_consume_token(puntoComa);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    List<Ins> linsInmutable = Collections.unmodifiableList(lins);
    Nodo nodo = new Nodo(cond.beginLine, cond.beginColumn);

    {if (true) return (e == null)? new IfThen(exp, linsInmutable, nodo):
      new IfThenElse(exp, linsInmutable, Collections.unmodifiableList(lins2), nodo);}
    throw new Error("Missing return statement in function");
  }

  final public Ins While() throws ParseException {
               Token wh; Exp exp; List<Ins> lins = new ArrayList<Ins>(); Ins ins;
    wh = jj_consume_token(whileSimbolo);
    exp = Expresion();
    jj_consume_token(doSimbolo);
    label_7:
    while (true) {
      switch (jj_nt.kind) {
      case ifSimbolo:
      case whileSimbolo:
      case read:
      case write:
      case nl:
      case newSimbolo:
      case delete:
      case seq:
      case booleano:
      case nulo:
      case resta:
      case not:
      case parentesisApertura:
      case entero:
      case real:
      case identificador:
      case cadena:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      ins = Ins();
                                                             lins.add(ins);
    }
    jj_consume_token(end);
    switch (jj_nt.kind) {
    case puntoComa:
      jj_consume_token(puntoComa);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    Nodo nodo = new Nodo(wh.beginLine, wh.beginColumn);
    {if (true) return new While(exp, Collections.unmodifiableList(lins), nodo);}
    throw new Error("Missing return statement in function");
  }

  final public Ins Compuesta() throws ParseException {
                   Token s; List<Dec> ldec = new ArrayList<Dec>(); List<Ins> lins = new ArrayList<Ins>();
    s = jj_consume_token(seq);
    ldec = SeccionDecs();
    lins = SeccionIns();
    switch (jj_nt.kind) {
    case puntoComa:
      jj_consume_token(puntoComa);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    {if (true) return new Seq(ldec, lins, new Nodo(s.beginLine, s.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Lectura() throws ParseException {
                 Token r; Exp exp;
    r = jj_consume_token(read);
    exp = Expresion();
    jj_consume_token(puntoComa);
    {if (true) return new Read(exp, new Nodo(r.beginLine, r.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Escritura() throws ParseException {
                   Token w; Exp exp;
    w = jj_consume_token(write);
    exp = Expresion();
    jj_consume_token(puntoComa);
    {if (true) return new Write(exp, new Nodo(w.beginLine, w.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins NewLine() throws ParseException {
                 Token n;
    n = jj_consume_token(nl);
    jj_consume_token(puntoComa);
                                                   {if (true) return new NewLine(new Nodo(n.beginLine, n.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins New() throws ParseException {
             Token n; Exp exp;
    n = jj_consume_token(newSimbolo);
    exp = Expresion();
    jj_consume_token(puntoComa);
    {if (true) return new New(exp, new Nodo(n.beginLine, n.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Ins Delete() throws ParseException {
                Token d; Exp exp;
    d = jj_consume_token(delete);
    exp = Expresion();
    jj_consume_token(puntoComa);
    {if (true) return new Delete(exp, new Nodo(d.beginLine, d.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public List<Exp> PReales() throws ParseException {
                       List<Exp> lexp = new ArrayList<Exp>(); Exp preal;
    switch (jj_nt.kind) {
    case booleano:
    case nulo:
    case resta:
    case not:
    case parentesisApertura:
    case entero:
    case real:
    case identificador:
    case cadena:
      preal = PReal();
                   lexp.add(preal);
      label_8:
      while (true) {
        switch (jj_nt.kind) {
        case coma:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_8;
        }
        jj_consume_token(coma);
        preal = PReal();
                                                              lexp.add(preal);
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    {if (true) return Collections.unmodifiableList(lexp);}
    throw new Error("Missing return statement in function");
  }

  final public Exp PReal() throws ParseException {
               Exp exp;
    exp = Expresion();
                                              {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Expresion() throws ParseException {
                   Exp exp;
    exp = ExpNivel0();
                                                  {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp ExpNivel0() throws ParseException {
                   Exp exp;
    exp = ExpNivel1();
    switch (jj_nt.kind) {
    case opRelacional:
      exp = OpNivel0(exp);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp OpNivel0(Exp op1) throws ParseException {
                         Exp op2; Token op;
    op = jj_consume_token(opRelacional);
    op2 = ExpNivel1();
    Nodo nodo = new Nodo(op.beginLine, op.beginColumn);
